# Tarea2Log

./: AbstractTree.h  CMakeLists.txt  PermutationEquiprob.cpp  PermutationEquiprob.h  PermutationSkew.cpp  PermutationSkew.h  Permutations.cpp  Permutations.h  README.md  TestPermutationEquiprob.cpp  TestPermutationSkew.cpp  TestRBTree.cpp  analisis.ipynb  arr_generate.cpp  experimento.txt  main.cpp  pruebas.cpp  rbTree.cpp  rbTree.h  splayTree.cpp  splayTree.h
data/: df_insert.txt  df_permutation.txt  df_search.txt
src/: Permutations.cpp  RBTree.cpp  SplayTree.cpp  main.cpp
src/headers/: AbstractTree.h  Permutations.h  RBTree.h  SplayTree.h
src/lib/: progressbar.h
